# SubprojectOutOfSourceCMake

./: CMakeLists.txt  README.md  build-clean.bat  build-clean.sh  build-debug.bat  build-debug.sh  build-release.bat  build-release.sh
src/: CMakeLists.txt
src/class1/: CMakeLists.txt  class1.cpp
src/class1/include/: class1.h
src/main/: CMakeLists.txt  main.cpp
src/main/include/: main.h
